<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!-- <a href="https://www.flaticon.com/kr/free-icons/" title="결과 아이콘"> A+ 결과 아이콘  제작자: Freepik - Flaticon</a> -->

    <item android:id="@+id/bottomNavi_home"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/notice_home"/>

    <item android:id="@+id/bottomNavi_general"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/general"
        android:title="@string/notice_ilban"/>

    <!-- <a href="https://www.flaticon.com/kr/free-icons/-" title="학사 학위 아이콘">학사 학위 아이콘  제작자: Freepik - Flaticon</a> -->
    <item android:id="@+id/bottomNavi_haksa"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/haksa"
        android:title="@string/notice_haksa"/>

    <item android:id="@+id/bottomNavi_recruit"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/recruit"
        android:title="@string/notice_chuiup"/>

    <item android:id="@+id/bottomNavi_janghak"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/janghak"
        android:title="@string/notice_janghak"/>

<!-- <a href="https://www.flaticon.com/kr/free-icons/-" title="취업 기회 아이콘">취업 기회 아이콘  제작자: Freepik - Flaticon</a> -->

    <!-- <a href="https://www.flaticon.com/kr/free-icons/-" title="공지 사항 게시판 아이콘">공지 사항 게시판 아이콘  제작자: PIXARTIST - Flaticon</a> -->
</menu>