<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/noticeGeneral_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:text="@string/notice_title_general"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/notice_RecyclerView"
                tools:layout_editor_absoluteX="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/searchGeneral_edittext"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/notice_edittext_hint"
                    android:inputType="text" />

                <Button
                    android:id="@+id/noticeGeneralSearch_button"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/search_button" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/noticeGeneral_RecyclerView"
                android:layout_width="match_parent"
                android:layout_height="590dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </FrameLayout>


</layout>