<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/noticeRecruit_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:text="@string/notice_title_recruit"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/notice_RecyclerView"
                tools:layout_editor_absoluteX="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/searchRecruit_edittext"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/notice_edittext_hint"
                    android:inputType="text" />

                <Button
                    android:id="@+id/noticeRecruitSearch_button"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/search_button" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/noticeRecruit_RecyclerView"
                android:layout_width="match_parent"
                android:layout_height="590dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <!--      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notice_linearLayout">

            <Button
                android:id="@+id/notice_more_button"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/notice_more"
                android:textColor="@color/white"
                android:textSize="20sp" />

            &lt;!&ndash; 원래 1,2,3,4,5 페이지 넘기는 식으로 하려다가 RecyclerView라서
                 그냥 더보기 버튼으로 해야겠다. &ndash;&gt;


        </LinearLayout>
-->
        <!-- ?attr/actionBarSize 이거 뭐냐? 액션바 사이즈로 해준다는건가?
 android:layout_height="?attr/actionBarSize"-->

    </FrameLayout>

</layout>